# CleanCode...Performance

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark.cpp
src/: CMakeLists.txt
src/CLike/: CLike.hpp
src/Union/: Union.hpp
src/Variant/: Variant.hpp
src/Virtual/: Virtual.hpp
src/examples/: main.cpp
